; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavfilter/extr_f_streamselect.c_process_command.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavfilter/extr_f_streamselect.c_process_command.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [4 x i8] c"map\00", align 1
@ENOSYS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*, i8*, i8*, i32, i32)* @process_command to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @process_command(i32* %0, i8* %1, i8* %2, i8* %3, i32 %4, i32 %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  store i32* %0, i32** %8, align 8
  store i8* %1, i8** %9, align 8
  store i8* %2, i8** %10, align 8
  store i8* %3, i8** %11, align 8
  store i32 %4, i32* %12, align 4
  store i32 %5, i32* %13, align 4
  %15 = load i8*, i8** %9, align 8
  %16 = call i32 @strcmp(i8* %15, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0))
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %29, label %18

18:                                               ; preds = %6
  %19 = load i32*, i32** %8, align 8
  %20 = load i8*, i8** %10, align 8
  %21 = call i32 @parse_mapping(i32* %19, i8* %20)
  store i32 %21, i32* %14, align 4
  %22 = load i32, i32* %14, align 4
  %23 = icmp slt i32 %22, 0
  br i1 %23, label %24, label %26

24:                                               ; preds = %18
  %25 = load i32, i32* %14, align 4
  store i32 %25, i32* %7, align 4
  br label %32

26:                                               ; preds = %18
  %27 = load i32*, i32** %8, align 8
  %28 = call i32 @avfilter_config_links(i32* %27)
  store i32 %28, i32* %7, align 4
  br label %32

29:                                               ; preds = %6
  %30 = load i32, i32* @ENOSYS, align 4
  %31 = call i32 @AVERROR(i32 %30)
  store i32 %31, i32* %7, align 4
  br label %32

32:                                               ; preds = %29, %26, %24
  %33 = load i32, i32* %7, align 4
  ret i32 %33
}

declare dso_local i32 @strcmp(i8*, i8*) #1

declare dso_local i32 @parse_mapping(i32*, i8*) #1

declare dso_local i32 @avfilter_config_links(i32*) #1

declare dso_local i32 @AVERROR(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
